# ircgw

./: Makefile.in  config.h.in  configure  configure.in
doc/: ircgw.example.conf  vip4gen.php
src/: Makefile.in  gw_client.c  gw_client.h  gw_common.c  gw_common.h  gw_config.c  gw_config.h  gw_listener.c  gw_listener.h  gw_log.c  gw_log.h  gw_sockets.c  gw_sockets.h  gw_ssl.c  gw_ssl.h  gw_string.c  gw_string.h  gw_webirc.c  gw_webirc.h  main.c  main.h
tools/: gencert
